добавлена кнопка генерации, прокрутка стикеров на доске

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
                 </div>
                 <div class="canban-add">
                     <form action="">
-                        <textarea name="" id="new-sticker-text" cols="30" rows="10"
+                        <textarea name="" id="new-sticker-text" cols="30" rows="10" class="sticker-textarea"
                             placeholder="Напишите новую задачу. Помните, что она должна уместиться в квадрат стикера"></textarea>
                         <input type="button" value="Добавить" class="button" id="add-sticker-button">
+                        <input type="button" value="Случайный стикер" class="button" id="generate-sticker-button">
                     </form>
                 </div>
             </div>
@@ -39,6 +40,7 @@
     </main>
     <footer></footer>
     <script src="script.js"></script>
+    <script src="generate.js"></script>
 
 </body>
 
